fix transition flicker bug

--- a/client/src/style/_utilities.scss
+++ b/client/src/style/_utilities.scss
@@ -47,6 +47,7 @@
   transform: scale3d(0.9, 0.9, 0.9);
   transition: 300ms;
   opacity: 0.7;
+  z-index: -1;
   pointer-events: none !important;
   overflow: hidden !important;
 }
